simplify code and load data from another repo directly, remove MD related chunks

--- a/code/010_MA_data.Rmd
+++ b/code/010_MA_data.Rmd
@@ -30,12 +30,6 @@ library(Hmisc)
 library(rworldmap)
 library(ggpubr)
 
-### packages for meta-analysis
-# install.packages("remotes")
-# remotes::install_github("guido-s/meta", ref = "develop")
-### or an old version that supports R3.6
-# url <- 'https://cran.r-project.org/src/contrib/Archive/meta/meta_4.15-0.tar.gz'
-# install.packages(url, repos=NULL, type="source")
 library(meta)
 library(metafor)
 
@@ -62,527 +56,16 @@ source('./code/func_ggsave.R')
 
 # Data
 
-## Load data from Covidence
-
+  Load data
 ```{r}
 
-## load data 
-fs <- list.files(path = "./data/0301-MA-input/", pattern = '^df_covidenceFull', full.names = T); 
-# fs;
-
-##' select the up-to-date data, which is the second to the last
-f1 <- fs[(length(fs)-2)]; f1
-
-##' select the gsheet data file
-f2o1 <- fs[(length(fs)-1)]; f2o1;
-f2o2 <- fs[(length(fs)-0)]; f2o2;
-
-df_1 <- readRDS(file = f1) 
-
-df <- df_1 %>%
-  dplyr::rename(
-    'exposure_type'   = 'Nature exposure type',
-    'nature_type'     = "General category of urban nature",
-    'nature_quantity' = "Nature quantity measure metric",
-    "n_participants"  = "Total number of participants",
-    "buffers"         = "Buffer zone size considered for nature exposure measurement",
-    "buffers_unit"    = "Buffer zone size's unit",
-    'study_design'    = 'Study design',
-    "City" = "City and state/province  in which the study conducted"
-                  ) %>%
-  dplyr::rename_with(~ 'if_standardized', matches("Does this paper employ standardized")) %>%
-  dplyr::rename_with(~ 'average_age', matches("Average age ")) %>%
-  dplyr::rename_with(~ 'male_percent', matches("Percentage of \\*male\\* participants")) %>%
-  dplyr::rename_with(~ 'duration_value', matches("Duration of actual nature exposure")) %>%
-  dplyr::rename_with(~ 'duration_unit', matches("The unit of time")) %>%
-  dplyr::mutate(id = as.character(id),
-                effect_size_indices = `Effect size indices`) %>%
-  dplyr::select(1:`Effect size indices`, effect_size_indices, everything()) %>%
-  ## remove some columns 
-  dplyr::select(-matches("If No")) %>%
-  dplyr::mutate(
-    # remove text within parenthesis 
-    `Health outcome direction` = gsub("\\s*\\([^\\)]+\\)", "", `Health outcome direction`), 
-    if_standardized = gsub("\\s*\\([^\\)]+\\)", "", if_standardized), 
-    if_standardized = trimws(if_standardized),
-    ) %>%
-  
-  func_clean_nature_type(data = ., column_name = 'nature_type') %>%
-  func_clean_nature_quant(data = ., column_name = 'nature_quantity') %>%
-  func_clean_bufferunit(data = ., column_name = 'buffers_unit') %>%
-  func_clean_tools(data = ., column_name = 'Tools') %>%
-  func_clean_exposure(data = ., column_name = 'exposure_type') %>%
-  dplyr::mutate(exposure_type = gsub("；", ";", exposure_type)) %>%
-  dplyr::mutate(exposure_type = gsub("Other: |Other:", "", exposure_type)) %>%
-  dplyr::mutate(exposure_type = gsub("\\s*\\([^\\)]+\\)", "", exposure_type)) %>% # remove text within parenthesis
-  
-  dplyr::mutate(
-    study_design = case_when(
-      study_design == 'Randomised controlled trial (RCT)' ~ 'RCT',
-      TRUE ~ study_design  ),
-    study_design = gsub(" controlled before-after study", "", study_design),
-    study_design = gsub(", e.g., ", "", study_design),
-    study_design = gsub("\\s*\\([^\\)]+\\)", "", study_design), # remove text within parenthesis 
-    study_design = trimws(study_design)) %>%
-  
-  ## clean messy text in `effect_size_indices`
-  func_clean_effectsize(data = ., column_name = 'effect_size_indices') %>%
-  dplyr::mutate(
-    effect_size_indices = gsub("Other: |Other:", "", effect_size_indices),
-    # effect_size_indices = gsub("=.*", "", effect_size_indices), ## remove everything after "="
-    effect_size_indices = trimws(effect_size_indices),
-    effect_size_indices = case_when(
-      effect_size_indices %in% c("coefficient", "coefficients") & if_standardized == "No" ~ "Unstandardized coefficients", 
-      effect_size_indices %in% c("coefficient", "coefficients") & if_standardized == "Yes"  ~ "Standardized coefficients", 
-      TRUE ~ effect_size_indices)) %>%
-  # dplyr::select(1:effect_size_indices, effect_size_name, everything()) %>% ## for data inspection 
-  
-  ##' clean duration in nature
-  func_cell_mean(df = ., column_name = 'duration_value', sep = ';') %>%
-  dplyr::mutate(
-    duration_unit = gsub("Other: |Other:", "", duration_unit),
-    duration_unit = trimws(duration_unit),
-    duration_unit = stringr::str_to_sentence(duration_unit),
-    
-    duration_mins = case_when(
-      !is.na(as.numeric(duration_value_mean)) & duration_unit =='Minutes' ~ as.numeric(duration_value_mean), 
-      !is.na(as.numeric(duration_value_mean)) & duration_unit =='Hours' ~ as.numeric(duration_value_mean)*60, 
-      ##' assuming 5 days a weeks, 5 hours per day, 4 weeks a month
-      !is.na(as.numeric(duration_value_mean)) & duration_unit =='Days'  ~ as.numeric(duration_value_mean)*60*5, 
-      !is.na(as.numeric(duration_value_mean)) & duration_unit =='Weeks' ~ as.numeric(duration_value_mean)*(5*5)*60,
-      !is.na(as.numeric(duration_value_mean)) & duration_unit =='Months' ~ as.numeric(duration_value_mean)*(5*5)*60*4,
-      TRUE ~ NA),
-    
-    duration_group = case_when(
-      is.na(duration_mins)   ~ NA,
-      duration_mins <= 15 ~ '<= 15', 
-      duration_mins <= 45 ~ '16-45',
-      TRUE ~ '>45'),
-    duration_group = factor(duration_group, levels = c('<= 15', '16-45', '>45'))
-    
-    ) %>%
-  dplyr::select(1:duration_unit, duration_mins, duration_group, everything()) %>% 
-  
-  
-  ## clean average age, and % of male
-  dplyr::mutate(male_percent = gsub("%", "", male_percent)) %>%
-  func_cell_mean(df = ., column_name = 'male_percent', sep = ';') %>%
-  func_cell_mean(df = ., column_name = 'average_age', sep = ';') %>%
-  dplyr::mutate(
-    gender_group = case_when(
-      is.na(male_percent_mean) ~ NA,
-      male_percent_mean < 40 ~ "Female > 60%",
-      male_percent_mean > 60 ~ "Male > 60%",
-      TRUE ~ "Gender Balance"
-    ), 
-    gender_group = factor(gender_group, levels = c("Female > 60%", 'Gender Balance', "Male > 60%")),
-    
-    age_group = case_when(
-      is.na(average_age_mean) ~ NA,
-      average_age_mean < 19 ~ 'Adolescents', # or "teenager" is common in everyday language
-      average_age_mean <= 25 ~ 'Young adults',
-      average_age_mean < 65 ~ 'Adults',
-      TRUE ~ 'Older adults'),
-    age_group = factor(age_group, levels = c('Adolescents', 'Young adults', 'Adults', 'Older adults'))
-    ) %>%
-  
-  as.data.frame()
-# names(df)
-
-## selected variables for further analysis
-cols_keep <- c('Indicator', 'Tools', 'nature_type',  'nature_quantity', 'exposure_type',
-               "study_design", 
-               'duration_mins', 'duration_group', 
-               'male_percent_mean', 'gender_group', 
-               'average_age_mean', 'age_group') 
+## Pre-cleaned data (Covidence data only)
+f <- paste0(dir.output, "df_cleaned.RDS")
 
 
-## To add study design tags in Covidence
-df_design <- df %>%
-  dplyr::select(1:3, study_design) %>%
-  dplyr::mutate(
-    id = paste0("#", id)
-    ) %>%
-  arrange(study_design)
-writexl::write_xlsx(x = df_design, path = paste0("./data/0301-MA-input/", "df_study_design.xlsx"))
-
-
-## load data from google sheet 
-df_2o1 <- readRDS(file = f2o1) %>%
-  func_clean_nature_type(data = ., column_name = 'nature_type') %>%
-  func_clean_nature_quant(data = ., column_name = 'nature_quantity') %>%
-  dplyr::mutate(id = gsub('#', '', id),
-                id = trimws(id)) %>%
-  as.data.frame()
-
-df_2o2 <- readRDS(file = f2o2) %>%
-  func_clean_nature_type(data = ., column_name = 'nature_type') %>%
-  func_clean_nature_quant(data = ., column_name = 'nature_quantity') %>%
-  dplyr::mutate(id = gsub('#', '', id),
-                id = trimws(id)) %>%
-  as.data.frame()
-
-unique(df$effect_size_indices) %>% sort()
+df <- readRDS(f)
 ```
 
-
-## Clean data
-
-```{r}
-
-## selected variables for further analysis
-cols_keep2 <- c("duration_value", "duration_unit", 'duration_mins', 'male_percent', 'average_age')
-
-df_exp <- df %>%
-  dplyr::select(1:7, any_of(cols_keep), matches(paste(cols_keep2, collapse="|"))) %>%
-  ## clean text in `exposure_type`
-  dplyr::filter(!is.na(exposure_type)) %>%
-  as.data.frame()
-
-
-## unify exposure names
-f <- 'https://docs.google.com/spreadsheets/d/11oUNNjsmzC4wvYwcE8Zm_qavww0D6Twxl8UoPve1WOE/edit?usp=sharing'
-exposure_tier <- googlesheets4::read_sheet(f, sheet = 'nature_exposure_channels', range = 'A:D') %>%
-  dplyr::select(-exposure_type_t3) %>%
-  as.data.frame()
-
-
-df_exp_l <- df_exp %>% 
-  ## expand `exposure_type` if there are > 1 exposure types in a study
-  expand_col_to_long(data = ., target_col = 'exposure_type') %>%
-  ## clean the messy text data due to manual entry 
-  func_clean_exposure(data = ., column_name = 'exposure_type') %>%
-  dplyr::mutate(
-    # exposure_type1 = ifelse(str_detect(exposure_type, regex('duration', ignore_case = T)), 'Time spent in nature', exposure_type),
-    exposure_type = ifelse(grepl(x = exposure_type, 'duration|Spending hour|Time spent', ignore.case = T), 
-                           'Duration in nature', exposure_type),
-    ) %>%
-  as.data.frame() %>%
-  left_join(., y = exposure_tier, by = 'exposure_type') %>%
-  # merge(x=., y = exposure_tier, by = 'exposure_type', all.x = T) %>%
-  dplyr::rename('exposure_type_t1' = 'exposure_type') %>%
-  
-  ## to decide which tier name for the next step analysis
-  dplyr::rename('exposure_type'    = 'exposure_type_t2') %>%
-  dplyr::select(1:exposure_type_t1, exposure_type, everything())  %>%
-  as.data.frame()
-```
-
-
-### stats
-
-```{r stats for MS}
-
-nrow(df) %>%
-  cat(., 'unique papers were included in data extraction.\n\n')
-
-
-##' n_participants -----------------------------------------------------------------------
-df.n <- df %>%
-  dplyr::select(1:2, n_participants) %>%
-  expand_col_to_long(data = ., target_col = 'n_participants') %>%
-  dplyr::mutate(n_participants = as.numeric(n_participants)) %>%
-  as.data.frame()
-
-summary(df.n$n_participants)
-sum(df.n$n_participants, na.rm = T)
-
-
-
-
-##' Country coverage ---------------------------------------------------------------------
-##' 
-## count number of countries in these included studies 
-df.c <- df %>%
-  dplyr::select(1:2, Country) %>%
-  expand_col_to_long(data = ., target_col = 'Country') %>%
-  func_clean_country(column_name = 'Country') %>%
-  as.data.frame()
-
-
-## rank countries by # of papers
-df.c %>%
-  group_by(Country) %>%
-  tally() %>% arrange(desc(n)) %>%
-  head() 
-
-# unique(df.c$Country) %>% sort()
-
-unique(df.c$Country) %>%
-  length() %>%
-  cat('\n\n', ., 'unique countries are incldued in the meta-analysis.')
-```
-
-
-```{r **To-do**}
-```
-  [] 6686 is missing in the data for POMS 
-  [x] add data from gsheet
-  [] 'L4' needs to be further clarified 
-  [] need to separate `In nature - PA` and `In nature - static`
-  [] need to separate "single-group pretest-posttest design"(= 1ba) and "independent-groups pretest-posttest design" (= 2ba)
-  
-
-```{r exposure}
-
-df_exp_l_stat <- df_exp_l %>% 
-  group_by(exposure_type_t1, exposure_type) %>%
-  dplyr::count() %>%
-  ungroup() %>%
-  as.data.frame()
-
-df_exp_l_stat2 <- df_exp_l_stat %>%
-  group_by(exposure_type) %>%
-  dplyr::summarise_at(c('n'), sum, na.rm = T) %>%
-  ungroup() %>%
-  dplyr::filter(!is.na(exposure_type)) %>%
-  as.data.frame()
-
-
-plot_freq(data = df_exp_l_stat2, var = 'exposure_type') +
-   geom_text(aes(label = n), vjust = .5, hjust = 0)
-
-f <- paste0('stats_nat_exp_', today, '.png')
-fname <- paste0(dir.fig, f); fname
-func_ggsave(fname = fname, w = 7, h = 4, save_png = T)
-```
-
-
-
-```{r exposure-tool}
-df_exp_l_toolL <- df_exp_l %>%
-  dplyr::mutate(Tool = gsub("Other: ", "", Tools),
-                ##' remove text within parenthesis 
-                Tool = gsub("\\s*\\([^\\)]+\\)", "", Tool)) %>%
-  expand_col_to_long(data = ., target_col = "Tool") %>%
-  dplyr::mutate(
-    Tool = gsub(".*Likert.*|.*likert.*", "Likert scale", Tool),
-    # Tool = gsub(";", "", Tool),
-    ) %>% 
-  func_clean_tools(data = ., column_name = 'Tool') %>%
-  dplyr::select(1:Tools, Tool, everything()) %>%
-  arrange(Tool)
-
-
-
-df_exp_tool_flow <- df_exp_l_toolL %>%
-  group_by(Tool, exposure_type) %>%
-  tally() %>%
-  as.data.frame() %>%  
-  pivot_longer(names_to  = 'dimension', 
-               values_to = 'layers', 
-               cols = c('Tool', 'exposure_type')) %>%
-  group_by(dimension) %>%
-  dplyr::mutate(id_within_layers = row_number(dimension)) %>%
-  arrange(dimension) %>%
-  dplyr::rename(freq = n) %>%
-  dplyr::mutate(
-    dimension = factor(dimension, 
-                       levels = c('exposure_type', 'Tool'), 
-                       labels = c('Exposure types', 'Metrics') ),
-    ) %>%
-  group_by(layers) %>%
-  dplyr::mutate(total = sum(freq, na.rm = T)) %>%
-  as.data.frame()
-
-width_my <- 1/2
-sorted <- T  ## sorted by flow size
-sorted <- NA ## default setting, sorted alphabetically 
-
-indicator_n_min <- 5 ## only map indicators with more than 5 times
-# Labeling small strata
-labele_small <- 5
-
-
-func_alluvial(data = df_exp_tool_flow, indicator_n_min = 5, width_my = width_my, w_p = 7,
-              show_y_ticks = F, 
-              filename.prefix = '', filename.postfix = 'tool_exposure')
-```
-
-
-
-```{r selected tools ---------------}
-### only include the top 3 MH tools ------------------------------------------------------
-tool_selected <- c('GHQ-12', 'PANAS', 'POMS', 
-                   'STAI', 'SVS',
-                   'SF-12', 'SF-36', 'WEMWBS', 'WHO-5',
-                   'PSS', 'ROS')
-n_tool <- length(unique(tool_selected)); n_tool
-
-# df_exp_tool_flow3 <- df_exp_tool_flow %>%
-#   dplyr::mutate(remove = ifelse(dimension == 'Tool' & !layers %in% tool_selected, 0, 1)) %>%
-#   dplyr::filter(remove != 0) %>% dplyr::select(-remove)
-
-df_exp_tool_flow3 <- df_exp_l_toolL %>%
-  dplyr::filter(Tool %in% tool_selected) %>% 
-  group_by(Tool, exposure_type) %>%
-  tally() %>%
-  as.data.frame() %>%  
-  pivot_longer(names_to  = 'dimension', 
-               values_to = 'layers', 
-               cols = c('Tool', 'exposure_type')) %>%
-  group_by(dimension) %>%
-  dplyr::mutate(id_within_layers = row_number(dimension)) %>%
-  arrange(dimension) %>%
-  dplyr::rename(freq = n) %>%
-  dplyr::mutate(
-    dimension = factor(dimension, 
-                       levels = c('exposure_type', 'Tool'), 
-                       labels = c('Exposure types', 'Metrics') ),
-    ) %>%
-  group_by(layers) %>%
-  dplyr::mutate(total = sum(freq, na.rm = T)) %>%
-  as.data.frame()
-
-func_alluvial(data = df_exp_tool_flow3, indicator_n_min = 5, width_my = width_my, w_p = 7,
-              labele_small = 5,
-              show_y_ticks = F, 
-              filename.prefix = '', filename.postfix = paste0('tool', n_tool, '_exposure'))
-```
-
-
-```{r type-exposure-tool}
-
-df_type_exp_tool <- df_exp_l_toolL %>%
-  dplyr::filter(Tool %in% tool_selected) %>% 
-  func_clean_nature_type(data=., column_name = 'nature_type', aggregate = T) %>%
-  expand_col_to_long(data = ., target_col = 'nature_type') %>%
-  group_by(nature_type, exposure_type, Tool) %>%
-  tally() %>%
-  as.data.frame() %>%  
-  pivot_longer(names_to  = 'dimension', 
-               values_to = 'layers', 
-               cols = c('Tool', 'exposure_type', 'nature_type')) %>%
-  group_by(dimension) %>%
-  dplyr::mutate(id_within_layers = row_number(dimension)) %>%
-  arrange(dimension) %>%
-  dplyr::rename(freq = n) %>%
-  dplyr::mutate(
-    dimension = factor(dimension, 
-                       levels = c('nature_type', 'exposure_type', 'Tool'), 
-                       labels = c('Nature type', 'Exposure type', 'Metric') ),
-    ) %>%
-  group_by(layers) %>%
-  dplyr::mutate(total = sum(freq, na.rm = T)) %>%
-  as.data.frame()
-
-df_type_exp_tool %>% func_alluvial(
-  data = ., indicator_n_min = 5, width_my = width_my, w_p = 7,
-  labele_small = 5,
-  show_y_ticks = F, 
-  filename.prefix = '', filename.postfix = paste0('tool', n_tool, '_exposure_natureType'))
-```
-
-
-
-```{r age group}
-min(df$average_age_mean, na.rm = T) # 10.8
-
-p_age <- df %>% 
-  ggplot() +
-  geom_histogram(aes(x = average_age_mean, fill = age_group), binwidth = 2) +
-  # scale_x_continuous()
-  theme_bw()+
-  theme(legend.position = c(0.8, 0.75), legend.background = element_rect(fill = "transparent", colour = "transparent"))
-p_age
-```
-
-
-
-```{r gender %}
-p_gender <- df %>% 
-  ggplot() +
-  geom_histogram(aes(x = male_percent_mean, fill = gender_group), binwidth = 5) +
-  theme_bw()+
-  theme(legend.position = c(0.8, 0.75), legend.background = element_rect(fill = "transparent", colour = "transparent"))
-
-p_gender
-```
-
-
-
-```{r duration}
-df %>% 
-  dplyr::filter(duration_mins < quantile(.$duration_mins, probs = 0.99, na.rm = T) ) %>%
-  ggplot() +
-  geom_histogram(aes(x = duration_mins), binwidth = 10) +
-  theme_bw()
-
-# df %>% 
-#   # dplyr::filter(duration_mins < quantile(.$duration_mins, probs = 0.85, na.rm = T) ) %>%
-#   dplyr::filter(duration_mins < 120 ) %>%
-#   ggplot() +
-#   geom_histogram(aes(x = duration_mins), binwidth = 5) +
-#   scale_x_continuous(breaks = c(15, 20, 30, 60)) +
-#   theme_bw()
-
-
-p_duration <- df %>% 
-  # dplyr::filter(duration_mins < quantile(.$duration_mins, probs = 0.85, na.rm = T) ) %>%
-  dplyr::filter(duration_mins < 120 ) %>%
-  ggplot() +
-  geom_histogram(aes(x = duration_mins, fill = duration_group), binwidth = 10) +
-  scale_x_continuous(breaks = c(15, 30, 45, 60)) +
-  theme_bw() +
-  theme(legend.position = c(0.8, 0.75), legend.background = element_rect(fill = "transparent", colour = "transparent"))
-
-p_duration
-```
-
-
-```{r stat - combine - SM, warning=FALSE}
-ggarrange(p_age, p_gender, p_duration)
-
-fname <- paste0(dir.fig, paste0('stats_subgroup_', today, '.png')); #fname
-func_ggsave(fname = fname, w = 7, h = 7, save_png = T)
-```
-
-
-
-```{r nature_quantity}
-source('./code/func_alluvial.R')
-
-df_q <- df_exp %>%
-  dplyr::select(1:2, Indicator, Tools, nature_type, nature_quantity, 
-         # buffer, buffer_unit, 
-         exposure_type) %>%
-  dplyr::filter(!nature_quantity %in% c('', NA, 'NA'))
-
-
-## nature quantity metrics - plan to look into
-pat_q <- "NDVI|EVI|Percent|SVG|cover"
-
-df_q_ndvi <- df_q %>%
-  dplyr::filter(str_detect(nature_quantity, pattern = regex(pat_q, ignore_case = TRUE)))
-
-df_q_ndvi_ <- df_q_ndvi %>%
-  dplyr::select(Tools, nature_quantity) %>%
-  expand_col_to_long(data = ., target_col = 'Tools') %>%
-  expand_col_to_long(data = ., target_col = 'nature_quantity') %>%
-  dplyr::filter(str_detect(nature_quantity, pattern = regex(pat_q, ignore_case = TRUE))) %>%
-  group_by(Tools, nature_quantity) %>%
-  tally() %>%
-  as.data.frame() %>%  
-  pivot_longer(names_to  = 'dimension', 
-               values_to = 'layers', 
-               cols = c('Tools', 'nature_quantity')) %>%
-  group_by(dimension) %>%
-  dplyr::mutate(id_within_layers = row_number(dimension)) %>%
-  arrange(dimension) %>%
-  dplyr::rename(freq = n) %>%
-  group_by(layers) %>%
-  dplyr::mutate(total = sum(freq, na.rm = T)) %>%
-  as.data.frame()
-
-indicator_n_min <- 2 ## only map indicators with more than n times
-# Labeling small strata
-labele_small <- 3
-
-
-func_alluvial(data = df_q_ndvi_, indicator_n_min = indicator_n_min, width_my = width_my, w_p = 7,
-              show_y_ticks = T, add_flow_label = F,
-              filename.prefix = '', filename.postfix = 'tool_quantity')
-```
 
 
 ## Prepare data for MA
@@ -590,8 +73,6 @@ func_alluvial(data = df_q_ndvi_, indicator_n_min = indicator_n_min, width_my = w
 ### * Coefficient-based outcomes ---
 
 ```{r - function}
-tool_selected
-
 
 ###' subset papers that examined `exposure_type_i`
 ###' 
@@ -769,212 +250,41 @@ saveRDS(exp_sub_df, file = f)
 
 
 
-### * MD-focused outcomes ---
-
+#### - PHQ
 ```{r}
-effect_size_ind_i <- c(
-  "D",
-  "d_cohens",
-  'Raw values',
-  "Mean_pre_post")
-```
+mh_tool <- c('PHQ')
 
-
-#### - PANAS
-```{r}
-mh_tool <- "PANAS"
-
-##' exclude selected study for now, while waiting for the authors to clarify the data (e.g., sd, se)
-id_exclude <- c('2186') 
-
-# exposure_type_i   <- c('stay static in nature', 'physical activity in nature') 
-exposure_type_i   <- c('In nature - Static', 'In nature - PA')
- 
-exp_sub_df <- func_exp_subset(df = df, exposure_type_i = exposure_type_i, mh_tool = mh_tool) %>%
-  dplyr::filter(!id %in% id_exclude)
-
-sub_panas <- exp_sub_df
-
-## save for later use
-f <- paste0('./data/0301-MA-input/', 'sub_', paste(mh_tool, sep = '', collapse = '_'), '.RData'); f
-save(mh_tool, exposure_type_i, effect_size_ind_i, exp_sub_df, file = f)
-
-f <- gsub('RData', 'rds', f); f
-saveRDS(exp_sub_df, file = f)
-```
-
-
-
-#### - POMS
-```{r}
-mh_tool <- "POMS"
-
-##' exclude selected study for now, while waiting for the authors to clarify the data (e.g., sd, se)
-id_exclude <- c('6523') 
-
-# exposure_type_i   <- c('stay static in nature', 'physical activity in nature') 
-exposure_type_i   <- c('In nature - Static', 'In nature - PA')
-
-###' subset papers that examined `exposure_type_i`
-exp_sub_df <- func_exp_subset(df = df, exposure_type_i = exposure_type_i, mh_tool = mh_tool) %>%
-  dplyr::filter(!id %in% id_exclude)
-
-sub_poms <- exp_sub_df
-
-## save for later use
-f <- paste0('./data/0301-MA-input/', 'sub_', paste(mh_tool, sep = '', collapse = '_'), '.RData'); f
-save(mh_tool, exposure_type_i, effect_size_ind_i, exp_sub_df, file = f)
-
-f <- gsub('RData', 'rds', f); f
-saveRDS(exp_sub_df, file = f)
-```
-
-
-#### - PSS - exp
-```{r}
-mh_tool <- c('PSS')
-
-##' filter exposure types based on this broader category
-##' It is likely this does not cover all the list in papers
-unique(df_exp_l$exposure_type)
-exposure_type_i   <- c('Residential', 'In nature - Static', 'In nature - PA', 'Interacting')
 
 ## test 
 df_test <- df %>%
+  # dplyr::filter(id %in% exp_sub_id) %>%
   dplyr::filter(stringr::str_detect(Tools, paste(mh_tool, collapse = "|"))) %>%
   as.data.frame()
 
-df_test %>%
-  group_by(effect_size_indices) %>% count(effect_size_indices)
+
 
 exp_sub_df <- func_exp_subset(df = df, exposure_type_i = exposure_type_i, mh_tool = mh_tool)
 exp_sub_df %>%
   group_by(effect_size_indices) %>% count(effect_size_indices)
-sub_pss <- exp_sub_df
+
+
+sub_phq <- exp_sub_df
 
 ## save for later use
-f <- paste0('./data/0301-MA-input/', 'sub_', paste(mh_tool, sep = '', collapse = '_'), '.RData'); f
-save(mh_tool, exposure_type_i, effect_size_ind_i, exp_sub_df, file = f)
-
-f <- gsub('RData', 'rds', f); f
-saveRDS(exp_sub_df, file = f)
+f <- paste0('./data/0301-MA-input/', 'sub_', paste(mh_tool, sep = '', collapse = '_'), '_obs.RData'); f
+# save(mh_tool, exposure_type_i, effect_size_ind_i, exp_sub_df, file = f)
+# 
+# f <- gsub('RData', 'rds', f); f
+# saveRDS(exp_sub_df, file = f)
 ```
 
 
-#### - ROS
+
+#### - GAD
 ```{r}
-mh_tool <- c('ROS')
 
-##' filter exposure types based on this broader category
-##' It is likely this does not cover all the list in papers
-unique(df_exp_l$exposure_type)
-exposure_type_i   <- c('Residential', 'In nature - Static', 'In nature - PA')
-
-
-## test 
-df_test <- df %>%
-  # dplyr::filter(id %in% exp_sub_id) %>%
-  dplyr::filter(stringr::str_detect(Tools, paste(mh_tool, collapse = "|"))) %>%
-  as.data.frame()
-
-exp_sub_df <- func_exp_subset(df = df, exposure_type_i = exposure_type_i, mh_tool = mh_tool)
-sub_ros <- exp_sub_df
-
-## save for later use
-f <- paste0('./data/0301-MA-input/', 'sub_', paste(mh_tool, sep = '', collapse = '_'), '.RData'); f
-save(mh_tool, exposure_type_i, effect_size_ind_i, exp_sub_df, file = f)
-
-f <- gsub('RData', 'rds', f); f
-saveRDS(exp_sub_df, file = f)
 ```
 
-
-#### - STAI
-```{r}
-mh_tool <- c('STAI')
-
-##' filter exposure types based on this broader category
-##' It is likely this does not cover all the list in papers
-unique(df_exp_l$exposure_type)
-exposure_type_i   <- c('Residential', 'In nature - Static', 'In nature - PA')
-
-
-## test 
-df_test <- df %>%
-  # dplyr::filter(id %in% exp_sub_id) %>%
-  dplyr::filter(stringr::str_detect(Tools, paste(mh_tool, collapse = "|"))) %>%
-  as.data.frame()
-
-exp_sub_df <- func_exp_subset(df = df, exposure_type_i = exposure_type_i, mh_tool = mh_tool)
-
-sub_stai <- exp_sub_df
-
-## save for later use
-f <- paste0('./data/0301-MA-input/', 'sub_', paste(mh_tool, sep = '', collapse = '_'), '.RData'); f
-save(mh_tool, exposure_type_i, effect_size_ind_i, exp_sub_df, file = f)
-
-f <- gsub('RData', 'rds', f); f
-saveRDS(exp_sub_df, file = f)
-```
-
-
-#### - SVS
-```{r}
-mh_tool <- c('SVS')
-
-##' filter exposure types based on this broader category
-##' It is likely this does not cover all the list in papers
-unique(df_exp_l$exposure_type)
-exposure_type_i   <- c('Residential', 'In nature - Static', 'In nature - PA')
-
-
-## test 
-df_test <- df %>%
-  # dplyr::filter(id %in% exp_sub_id) %>%
-  dplyr::filter(stringr::str_detect(Tools, paste(mh_tool, collapse = "|"))) %>%
-  as.data.frame()
-
-exp_sub_df <- func_exp_subset(df = df, exposure_type_i = exposure_type_i, mh_tool = mh_tool)
-
-sub_svs <- exp_sub_df
-
-## save for later use
-f <- paste0('./data/0301-MA-input/', 'sub_', paste(mh_tool, sep = '', collapse = '_'), '.RData'); f
-save(mh_tool, exposure_type_i, effect_size_ind_i, exp_sub_df, file = f)
-
-f <- gsub('RData', 'rds', f); f
-saveRDS(exp_sub_df, file = f)
-```
-
-
-#### - DASS-21
-```{r}
-mh_tool <- c('DASS-21')
-
-unique(df_exp_l$exposure_type)
-exposure_type_i   <- c('Residential', 'In nature - Static', 'In nature - PA', 'Interacting')
-
-
-## test 
-df_test <- df %>%
-  dplyr::filter(stringr::str_detect(Tools, paste(mh_tool, collapse = "|"))) %>%
-  as.data.frame()
-
-df_test %>%
-  group_by(effect_size_indices) %>% count(effect_size_indices)
-
-exp_sub_df <- func_exp_subset(df = df, exposure_type_i = exposure_type_i, mh_tool = mh_tool)
-exp_sub_df %>%
-  group_by(effect_size_indices) %>% count(effect_size_indices)
-sub_dass <- exp_sub_df
-
-## save for later use
-f <- paste0('./data/0301-MA-input/', 'sub_', paste(mh_tool, sep = '', collapse = '_'), '.RData'); f
-save(mh_tool, exposure_type_i, effect_size_ind_i, exp_sub_df, file = f)
-
-f <- gsub('RData', 'rds', f); f
-saveRDS(exp_sub_df, file = f)
-```
 
 
 
@@ -1035,25 +345,3 @@ for (fi in fs) {
 
 ```
 
-
-
-*Meta-analysis*
-
-  --> Ref to `010a_MA_intro.Rmd` for more background knowledge. 
-
-```{r functions, eval=FALSE, include=FALSE}
-# Calculate s_pooled - pooled standard deviation (SD) of both groups
-sd_pooled <- function(n1, n2, sd1, sd2) {
-  sd_p <- sqrt(
-    ( ((n1-1)*sd1^2) + ((n2-1)*sd2^2) )/
-      ((n1-1)+(n2-1))
-  )
-  return(sd_p)
-}
-
-# Calculate the standard error (SE)
-se_pooled <- function(n1, n2, sd1, sd2) {
-  se_p <- sd_pooled(n1, sd1, n2, sd2) * sqrt((1/n1)+(1/n2))
-  return(se_p)
-}
-```
